# beam

./: CHANGES.md  settings.gradle.kts
buildSrc/src/main/groovy/org/apache/beam/gradle/: BeamModulePlugin.groovy
runners/flink/src/main/java/org/apache/beam/runners/flink/: FlinkBatchTransformTranslators.java  FlinkStreamingPortablePipelineTranslator.java
runners/google-cloud-dataflow-java/src/main/java/org/apache/beam/runners/dataflow/: DataflowPipelineTranslator.java
sdks/antonbobkov-playground/rust-direct-runner/: Cargo.toml
sdks/antonbobkov-playground/rust-direct-runner/src/: main.rs
sdks/java/core/src/main/java/org/apache/beam/sdk/providers/: ManagedSchemaTransformProvider.java
sdks/java/core/src/main/java/org/apache/beam/sdk/transforms/: Redistribute.java
sdks/java/core/src/test/java/org/apache/beam/sdk/transforms/: RedistributeTest.java
sdks/java/io/iceberg/: build.gradle
sdks/java/io/iceberg/src/main/java/org/apache/beam/io/iceberg/: CombinedScanReader.java  DynamicDestinations.java  Iceberg.java  IcebergBoundedSource.java  IcebergDestination.java  IcebergIO.java  IcebergSink.java  IcebergWriteResult.java  MetadataUpdate.java  PrepareWrite.java  RecordWriter.java  RecordWriterFactory.java  TableFactory.java  WriteBundlesToFiles.java  (+1 more)
sdks/rust/: Cargo.toml  build.rs
sdks/rust/src/: coders.rs  construct.rs  lib.rs  portable_runner.rs  transforms.rs
sdks/rust/src/runners/: direct_runner.rs  mod.rs
sdks/rust/src/worker/: mod.rs  operators.rs
sdks/rust/tests/: construct_test.rs  standard_coders_tests.rs  worker_test.rs
(+5 files in other folders)
