[package]
name = "apache-beam"
description = "Apache Beam Rust SDK"
version = "2.40.0"
edition = "2021"
homepage = "https://beam.apache.org"
license = "Apache-2.0"
repository = "https://github.com/apache/beam"

[dependencies]
anyhow = "1.0.21"
futures = "0.3.25"
prost = "0.11.5"
prost-types = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
